--- a/Static/css/indexEstilos.css
+++ b/Static/css/indexEstilos.css
@@ -138,12 +138,14 @@
         cursor: pointer;
       
         
-        width: 120px;
+        width: 140px;
         height: 40px;
+        
     }
-    .opciones:hover{
-        background-color: rgb(66, 69, 86);
+    .opciones>a:hover{
+        color: #FF5A09;
     }
+  
     .img-profile{
         width: 100%;
         height: 100%;
