--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -17,12 +17,11 @@
         <div class="container">
             <div class="row">
                 <nav class="nav-menu">
-                    <p id="tituloEjercicio1" class="titulo-data">Data</p>
-                    <p id="tituloEjercicio2" class="titulo-base">Bass</p>
+                    <div class="navbar-logo">Data<strong>Base</strong></div>
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
                         <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
-                        <li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li>
+                        <li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Herramientas</a></li>
                     </ul>		
                     <div class="navbar-profile">
                         <div class="navbar-notification">
