--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -157,9 +157,12 @@
                 .imgRedonda {
                    border-radius: 50%;
                 }
-            #tituloEjercicio{
-                /*padding-left: 5%;*/
-            }
+                #tituloEjercicio1{
+                font-size: 20px;
+                }
+                #tituloEjercicio2{
+                    font-size: 25px;
+                }
             .titulo-data{
                font-weight: bold;
                color: white;
@@ -410,52 +413,113 @@
             background-position: center; 
             /* background-image: url('../img/logout6.png'); */
             cursor: pointer;
+            transition: .5s;
         }
-        /*--------Estilos Restablecer contraseña------------*/
-        *{
-            padding:0px;
-            margin: 0px;
-            font-family: 'Montserrat',sans-serif;
-            font-size: 16px;
+        .navbar-logout:hover {
+            background-color: rgba(248, 86, 4, 0.849);
         }
+
         
-        .PrincipalRestablecer{
-            width: 100%;
-            height: 100vh;
-            background: #333645;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .ContenidoRestablecer{
-            width: 45%;
-            height:400px;
-            background:#FFFFFF;
-            text-align: center;
-            border-radius: 0.3rem;
-            border-style: none;
-        }
-        .InputRestablecer{
-            width: 65%;
-            height: 26px;
-            margin-top: 40px;
-            text-indent: 10px;
-        }
-        .TituloRestablecer{
-            margin-top: 61px;
-           font-size: 30px;
-        }
-        .btnRestablecer{
-            background: #00B0FF;
-            margin-top: 40px;
-            width: 65%;
-            height:26px;
-            text-align: center;
-            border-radius: 0.3rem;
-            border-style: none;
-            color: white; 
-        }
-        
+.user-avatar {
+	width: 5rem;
+	height: 5rem;
+}
+
+.article-text {
+	width: 35%;
+    height: 12.5rem;
+    display: flex;
+flex-direction: column;
+justify-content: center;
+}
+#perfil-cambioContra{
+    height: 31px;
+border: none;
+width: 155px;
+font-size: 13px;
+border-radius: 4px;
+color: white;
+cursor: pointer;
+background-color: #FF5A09;
+transition: .55s;
+}
+#perfil-cambioContra:hover{
+    background-color: rgb(228, 81, 7);
+}
+
+.article-information {
+	position: relative;
+	width: 	55%;
+	left: 10%;
+	height: 12.5rem;
+}
+
+
+/* ASSETS */
+
+.fs-30 {
+    font-size: 30px;
+    color:#FF5A09;
+}
+
+.fs-25 {
+	font-size: 25px;
+}
+
+.fs-20 {
+	font-size: 20px;
+}
+
+.fs-18 {
+	font-size: 18px;
+}
+
+.fs-15 {
+	font-size: 15px;
+}
+
+.blue-dark-1 {
+	background-color: rgb(51, 54, 69);
+}
+
+.blue-dark-2 {
+	background-color: rgb(66, 69, 86);
+}
+
+.user-score {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.score {
+	height: 13rem;
+	width: 13rem;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.center-x {
+	display: flex;
+	justify-content: center;
+}
+
+.center-y {
+	display: flex;
+	align-items: center;
+}
+
+.txt-gray {
+	color: #dadada;
+}
+
+.txt-white {
+	color: #eeeeee;
+}
         /*-----------------------------------------------*/
         @media(max-width:1122px ){
             #unidadesEjerciciosContenedor{
@@ -479,4 +543,4 @@
             #unidadesEjerciciosContenedor{
                 /*background-color: red;*/
             }
-        
+        }
