--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -40,7 +40,7 @@
 </div>
 <footer>
     
-    <b>Centro de Desarrollo 2020 &copy. </b>
+    <b>Centro de Desarrollo- </b><b style="color: #FF5A09;">2020 &copy.</b>
 </footer>
 
 {% endblock %}
