--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -102,6 +102,7 @@ border-width: 3.1px;
             font-size:1rem;
             color: #f2f2f2;
         }
+        
         #botonLogin{
             background:#00B0FF;
             display: flex;
@@ -330,8 +331,12 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
                         justify-content: space-around;
                         align-items: center;
                         flex-wrap: wrap;
+                    }   
+                    #temasEjerciciosContenedor>p{
+                        color: white;
+                        font-size: 14px;
+                        text-align: center;
                     }
-
                     #temasEjerciciosContenedor>div{
                         /*margin-left:10%;*/
                         height: 30%;
@@ -488,42 +493,6 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
             cursor: pointer;
         }
         #btn-ejercicio-1-6:hover{
-            width: 152px;
-            height: 38px;
-            background-color: rgb(3, 161, 235);
-        }
-        #btn-ejercicio-2-2{
-            -webkit-box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            -moz-box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            width: 150px;
-            height: 35px;
-            border: none;
-            color: white;
-            background-color: #00B0FF;
-            border-radius: 4px;
-            transition: .5s;
-            cursor: pointer;
-        }
-        #btn-ejercicio-2-2:hover{
-            width: 152px;
-            height: 38px;
-            background-color: rgb(3, 161, 235);
-        }
-        #btn-ejercicio-2-3{
-            -webkit-box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            -moz-box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            box-shadow: 4px 4px 5px 0px rgba(224,224,224,0.62);
-            width: 150px;
-            height: 35px;
-            border: none;
-            color: white;
-            background-color: #00B0FF;
-            border-radius: 4px;
-            transition: .5s;
-            cursor: pointer;
-        }
-        #btn-ejercicio-2-3:hover{
             width: 152px;
             height: 38px;
             background-color: rgb(3, 161, 235);
