--- a/Templates/profile.html
+++ b/Templates/profile.html
@@ -19,15 +19,18 @@
 		</div>
 		<div>
 			<p class="txt-white"><strong>Promedio</strong></p>
-			<p class="center-x txt-gray">0.0</p>
+			<p class="center-x txt-gray" style="color: #FF5A09; font-weight: bold;">0.0</p>
 		</div>
+		<a href="{% url 'cambiarContraseña' %}">
+			<button id="perfil-cambioContra">Cambiar contraseña</button>
+		</a>
 	</section>
 </div>
 
 <div class="row">
 	<div class="article-text txt-white">
 		<h2 class="fs-30 font-bold">Progreso del alumno</h2>
-		<p class="fs-18">Gráfica de estadísticas de cada unidad del alumno se muestran los aciertos por cada intento de los ejercicios de la unidad.</p>
+		<p class="fs-16">Gráfica de estadísticas de cada unidad del alumno, se muestran los aciertos por cada intento de los ejercicios en la unidad.</p>
 	</div>
 	<div class="article-information blue-dark-2">
 
@@ -44,8 +47,6 @@
 </div>
 </div>
 
-<a href="{% url 'cambiarContraseña' %}">
-	<button>Cambiar contraseña</button>
-</a>
+
 
 {% endblock %}
