*fix* Help text in reset password & length username in login

--- a/Templates/cambiar_contrasena.html
+++ b/Templates/cambiar_contrasena.html
@@ -27,6 +27,7 @@
                     <td class="tdRestablecer">
                       {{ field.errors }}
                       {{ field }}
+                      {{ field.help_text }}
                     </td>
                   </tr>
                 {% endfor %}
