--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -19,7 +19,7 @@
 			<div id="encabezado-menuEjercicios">
 				
 				<a href="{% url 'dashboard' %}"><img id="imagenback" src="{% static 'img/back.png' %}"></a>
-				<img id="imagenperfil" class="imgRedonda" src="{% static 'img/imagenperfil.jpg' %}">
+				<!-- <img id="imagenperfil" class="imgRedonda" src="{% static 'img/imagenperfil.jpg' %}"> -->
 				<p id="tituloEjercicio" class="titulo-data">Data</p>
 				<p id="tituloEjercicio" class="titulo-base">Bass</p>
 			</div>
