--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -22,19 +22,29 @@
             <h1 id="dashboard-title">Inicio</h1>
         </div>
             <div id="right-dashboard-container-middle">
-                <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt lacus ac ipsum bibendum fermentum. Fusce tempor dolor a metus egestas, ut finibus eros convallis.</P>
+                <P>Sin análisis de grandes volúmenes de datos, las empresas son ciegos y sordos, vagando hacia fuera sobre la web como ciervos en una autopista.
+                    </P>
+                    <b id="autor">– Geoffrey Moore</b>
             </div>
         </div>
     </div>
 <div id="bottom-container">
     <div id="cuadros-container">
         <div class="dashboard-cuadros">
+            <img src="{% static 'img/bd.png' %}" alt="">
+            <text id="text1">Alumnos con su propia</text><b style="color: #FF5A09;">BD.</b>
         </div>
         <div class="dashboard-cuadros">
+            <img src="{% static 'img/herramienta.png' %}" alt="">
+            <b style="color: #FF5A09; margin-top: 20px;">Herramienta</b> <text style="color: white;"> de facil uso</text>
         </div>
         <div class="dashboard-cuadros">
+            <img src="{% static 'img/foco.png' %}" alt="">
+            <b style="color: #FF5A09; margin-top: 20px;">Reafirma</b> <text style="color: white;">tu conocimientos en clase</text>
         </div>
         <div class="dashboard-cuadros">
+            <img src="{% static 'img/reloj.png' %}" alt="">
+         <text style="color: white;" id="text1">Pon en practica tus</text><b style="color: #FF5A09;">habilidades.</b>
         </div>
     </div>
 </div>
