--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/indexEstilos.css' %}">   
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon-96x96.png'%}">
     <title>Compilador</title>
 </head>
 <body>
