--- a/Static/css/indexEstilos.css
+++ b/Static/css/indexEstilos.css
@@ -185,10 +185,11 @@
         justify-content: center;
        align-items: center;
         flex-direction: column;
+        border-radius: 8px;
     }
     #rectangulo{
         width: 130px;
-        height: 15px;
+        height: 10px;
         background-color: #ffffff;
     }
     #dashboard-title{
@@ -213,11 +214,16 @@
         justify-content: center;
         align-items: center;
         font-size: 19px;
-      
+      flex-direction: column;
         color: white;
     }
     #right-dashboard-container-middle>p{
         color: white;
+        font-size: 17px;
+    }
+    #autor{
+        width: 100%;
+        text-align: right;
     }
     #bottom-container{
 
@@ -243,6 +249,19 @@
         width: 280px;
         height: 250px;
         background: rgb(66, 69, 86);
+        display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+border-radius: 8px;
+    }
+    .dashboard-cuadros>img{
+        width: 72px;
+        height: 72px;
+    }
+    #text1{
+       color: white;
+       margin-top: 20px;
     }
     #cuadros-container{
         width: 90%;
