Se agrego navbar en vistas de maestro

--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -16,6 +16,41 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="row">
+			<nav class="nav-menu">
+				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio1" class="titulo-data">Data</p></a>
+				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio2" class="titulo-base">Bass</p></a> 
+				<ul class="navbar-list">
+					<li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
+					<!-- <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
+					<li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li> -->
+				</ul>		
+				<div class="navbar-profile">
+					<!-- <div class="navbar-notification">
+						
+						<div class="navbar-notification-count">1</div>
+					</div> -->
+					<div class="navbar-notification navbar-avatar">
+						<div class="navbar-picture">
+							<a href="{% url 'perfil' %}">
+								<img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
+							</a>
+							
+						</div>
+					</div>
+							<div class="navbar-logout navbar-avatar">
+								<div >
+									<a href="{% url 'cerrarSesion' %}">
+										<img src="{% static 'img/logout.png' %}" alt="" class="img-logout">
+									</a>
+								</div>
+							</div>
+					
+				</div>
+			</nav>
+			
+		</div>
 	<div class="principalRespuestas">
 		<div class="contenidoRespuestas">
 			<div class="clasesRespuestas">
