--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -614,9 +614,95 @@
 .txt-white {
   color: #eeeeee;
 }
+/*--------Estilos NAVBAR Maestro ---------------*/
+.row{
+  display: flex;
+  padding: 2% 5%;
+  background: rgb(51,54,69);
+}
+.nav-menu{
+  width: 100%;
+  height: 12%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navbar-list {
+  display: flex;
+  color: white;
+  list-style: none;
+  width: 75%;
+  justify-content: space-evenly;
+}
+.navbar-profile {
+  display: flex;
+  justify-content: space-around;
+  width: 10%;
+}
+.opciones {
+  font-size: 17px;
+  cursor: pointer;
+  width: 140px;
+  height: 40px;
+}
+.navbar-avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navbar-picture {
+  width: 95%;
+  height: 95%;
+  background-color: gray;
+  border-radius: 50%;
+  border: 2px solid white;
+  transition: .55s;
+}
+.navbar-logout {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #eeeeee;
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  background-position: center;
+  /* background-image: url(../img/logout6.png); */
+  cursor: pointer;
+  transition: 0.5s;
+}
+.img-profile {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.img-logout {
+  width: 75%;
+  height: 75%;
+  margin-left: 20%;
+}
+.navbar-notification {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #eeeeee;
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  background-position: center;
+  background-image: url(../img/notification.png);
+  cursor: pointer;
+}
 /*--------Estilos Respuestas Maestro------------*/
+.container{
+  height:100vh;
+}
 .principalRespuestas {
-  height: 100vh;
+  height: 85%;
   width: 100%;
   background-color: #333645;
   display: flex;
@@ -729,7 +815,7 @@
 .principalCalificaciones {
   background-color: #333645;
   width: 100%;
-  height: 100vh;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -782,7 +868,7 @@
 }
 /*--------Estilos Ejercicios Maestro------------*/
 .principalEjercicios{
-  height: 100vh;
+  height: 85%;
   width: 100%;
   background-color: #333645;
   display: flex;
