--- a/compilador/css/drag.css
+++ b/compilador/css/drag.css
@@ -22,6 +22,8 @@ body{
   /* box-shadow: 7px 7px 5px 0px rgba(214,214,214,1); */
   border: 2px solid rgb(190, 190, 190);
   align-items: center;
+  overflow-x: hidden;
+  overflow: auto;
 }
 .table-header{
   border-bottom: 2px solid rgb(190, 190, 190);
@@ -37,16 +39,27 @@ body{
 }
 .table-body{
   width: 100%;
-  height: 85%;
+
  
- overflow: auto;
- overflow-x: hidden;
+ overflow: hidden;
+
 }
 .row-container{
   height: 85%;
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+.fk-container{
+  width: 40px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.fk-container>b{
+  color: green;
 }
 .row{
   -webkit-user-select: none;
